syntax = "proto3";

package go.micro.srv.products;
option go_package="suppliers";

service SuppliersService {
    rpc UpsertSuppliers (UpsertSuppliersReq) returns (UpsertSuppliersRsp);
    rpc Suppliers (SuppliersReq) returns (SuppliersRsp);
}

message UpsertSuppliersReq {
    repeated Supplier suppliers = 1;
}

message UpsertSuppliersRsp {
    repeated Supplier suppliers = 1;
}

message Supplier {
    // @inject_tag: valid:"uuidv4~suppliers ID must be a valid UUIDv4" conform:"trim"
    string ID = 1;
    // @inject_tag: valid:"required~Supplier name is required" conform:"trim"
    string name = 2;
    // @inject_tag: valid:"required~Supplier slug is required" conform:"trim,slug"
    string slug = 3;
    // @inject_tag: valid:"url~Supplier logo must be a valid URL" conform:"trim"
    string logo_url = 4;
    // @inject_tag: valid:"required, url~Supplier home page must be a valid URL" conform:"trim"
    string home_page_url = 5;
    // @inject_tag: conform:"trim"
    string currency = 6;
    int64 display_order = 7;
    int64 created_at  = 8;
    int64 updated_at = 9;
}

message SuppliersReq {

}

message SuppliersRsp {
    repeated Supplier suppliers = 1;
}
